# project-indigo

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/workflows/: build.yml
config/: config.json  lv_conf.h
docs/: architecture.md  milestones.md  setup.md
docs/development/: test-setup.md  versioning.md
src/: CMakeLists.txt  main.cpp
src/application/: Application.cpp  Application.h  CMakeLists.txt
src/common/: CMakeLists.txt
src/common/config/: CMakeLists.txt  Configuration.cpp  Configuration.h  IConfiguration.h
src/common/error/: Error.h  Result.h
src/common/logger/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Log.cpp  Log.h  LogLevel.cpp  LogLevel.h  LogMacro.h
src/platform/: CMakeLists.txt  IPlatform.h  Platform.cpp  Platform.h  SDLPlatform.cpp  SDLPlatform.h
src/pokedex/: CMakeLists.txt  IPokedex.h  Pokedex.cpp  Pokedex.h
src/pokedex/data/: Abilities.cpp  Abilities.h  CMakeLists.txt  Evolutions.cpp  Evolutions.h  Pokemons.cpp  Pokemons.h  Types.cpp  Types.h
src/pokedex/model/: CMakeLists.txt
src/pokedex/model/ability/: Ability.cpp  Ability.h  CMakeLists.txt
src/pokedex/model/evolution/: CMakeLists.txt  Evolution.cpp  Evolution.h  EvolutionMethod.cpp  EvolutionMethod.h
src/pokedex/model/pokemon/: CMakeLists.txt  Pokemon.cpp  Pokemon.h
src/pokedex/model/pokemon_details/: CMakeLists.txt  PokemonDetails.cpp  PokemonDetails.h
src/pokedex/model/type/: CMakeLists.txt  Type.cpp  Type.h
src/pokedex/repository/: CMakeLists.txt
src/pokedex/repository/evolution/: CMakeLists.txt  EvolutionRepository.cpp  EvolutionRepository.h  IEvolutionRepository.h
src/pokedex/repository/pokemon/: CMakeLists.txt  IPokemonRepository.h  PokemonRepository.cpp  PokemonRepository.h
src/ui/: CMakeLists.txt  IUserInterface.h  UserInterface.cpp  UserInterface.h
src/ui/screens/: CMakeLists.txt  IScreen.h  ScreenManager.h
src/ui/screens/home_screen/: HomeScreen.cpp  HomeScreen.h
src/ui/screens/temp_screen/: TempScreen.cpp  TempScreen.h
src/ui/widgets/: CMakeLists.txt  Widget.h  WidgetBehavior.cpp  WidgetBehavior.h  WidgetBuilder.h  WidgetStyle.h
src/ui/widgets/label/: Label.cpp  Label.h
tests/: CMakeLists.txt
tests/pokedex/repository/evolution/: EvolutionRepositoryTests.cpp
tests/pokedex/repository/pokemon/: PokemonRepositoryTests.cpp
